--- a/livro.tex
+++ b/livro.tex
@@ -8,7 +8,7 @@
 	12pt,				% tamanho da fonte
 	openright,			% capítulos começam em pág ímpar (insere página vazia caso preciso)
 	twoside,			% para impressão em recto e verso. Oposto a oneside
-	b5paper,			% tamanho do papel. 
+	b5paper,			% tamanho do papel.
 	% -- opções da classe abntex2 --
 	%chapter=TITLE,		% títulos de capítulos convertidos em letras maiúsculas
 	%section=TITLE,		% títulos de seções convertidos em letras maiúsculas
@@ -27,7 +27,7 @@
 \usepackage{mathtools}
 \usepackage{amsfonts}
 \usepackage{mathrsfs} % para mathscr
-\usepackage[subentrycounter,seeautonumberlist,nonumberlist=true,toc]{glossaries} 
+\usepackage[subentrycounter,seeautonumberlist,nonumberlist=true,toc]{glossaries}
 
   % % se for utilizar as fontes do sistema: **escolha sua fonte**
     % comandos de fontes
@@ -37,17 +37,17 @@
 \setmainfont[Numbers=OldStyle]{Source Serif Pro} %fonte principal (serifada)
 \setsansfont[Scale=0.9]{Source Sans Pro} %fonte sem serifas
 \setmonofont[Scale=MatchLowercase]{Source Code Pro} % fonte monoespaçada
-  
+
 \usepackage{polyglossia} %always load polyblossia after fonts for digits in math mode
 \setmainlanguage{brazil}
 \setotherlanguages{french,english,spanish,german,italian}
 
 \newfontfamily\ipafont{Doulos SIL}
-\newcommand{\ipa}[1]{{\ipafont #1}}
+\newcommand{\ipa}[1]{{\ipafont #1 \regularfont}}
 
 \usepackage{marginnote}
 
-%% Observação: o pacote polyglossia pode apresentar erro ao ser utilizado com ifxetex + babel. 
+%% Observação: o pacote polyglossia pode apresentar erro ao ser utilizado com ifxetex + babel.
 %% Se isso acontecer, atualize o pacote para a versão mais recente ou utilize somente uma das sequências (pdflatex ou xelatex), comentando ou apagando a outra.
 
 \usepackage{microtype} 				% para melhorias de justificação
@@ -89,7 +89,7 @@
 % ---
 % Informações do documento
 % ---
-\titulo{Letramento Digital}
+\titulo{Computadores e suas Abstrações}
 \autor{Gabriel V. N. de Queiroz}
 \data{2019, v<VERSION>}
 \preambulo{Breve sinopse do livro}
@@ -103,11 +103,11 @@
 \makeatletter
 \hypersetup{
      	%pagebackref=true,
-		pdftitle={\@title}, 
+		pdftitle={\@title},
 		pdfauthor={\@author},
     	pdfsubject={\imprimirpreambulo},
 	    pdfcreator={LaTeX with abnTeX2},
-		pdfkeywords={abnt}{latex}{abntex}{abntex2}{livro}, 
+		pdfkeywords={abnt}{latex}{abntex}{abntex2}{livro},
 		colorlinks=false,       		% false: boxed links; true: colored links
     	linkcolor=blue,          	% color of internal links
     	citecolor=blue,        		% color of links to bibliography
@@ -122,20 +122,20 @@
 % ---
 % Estilo de capítulos
 %
-% \chapterstyle{pedersen} 
-% \chapterstyle{lyhne} 
-%\chapterstyle{madsen} 
-\chapterstyle{veelo} 
+% \chapterstyle{pedersen}
+% \chapterstyle{lyhne}
+%\chapterstyle{madsen}
+\chapterstyle{veelo}
 %
 % Veja outros estilos em:
 % https://www.ctan.org/tex-archive/info/MemoirChapStyles
 % ---
 
 % para cabeçalhos sem estar em maiúsculas
-%\nouppercaseheads 
+%\nouppercaseheads
 
 % -----
-% Declarações de cabecalhos 
+% Declarações de cabecalhos
 % -----
 % Cabecalho padrao
 \makepagestyle{abntbookheadings}
@@ -152,13 +152,13 @@
   \pagestyle{abntbookheadings}%
   \aliaspagestyle{chapter}{abntbookchapfirst}% customizing chapter pagestyle
   \nouppercaseheads%
-  \bookmarksetup{startatroot}% 
+  \bookmarksetup{startatroot}%
 }
 % ---
 
 
 
-% Margens do documento 
+% Margens do documento
 %% (margens do abntex2 não combinam nem com A5 nem com estilos de capítulo da
 % classe memoir.)
 \setlrmarginsandblock{2.5cm}{3.5cm}{*}
@@ -211,12 +211,12 @@
 \raggedright
 \imprimirautor\\
 \vspace{2.5cm}
-\huge 
+\huge
 {\raggedleft
 \includegraphics[scale=0.9]{abntex2-modelo-img-marca.pdf}\\[1cm]
 \textit{\textcolor{blue}{\imprimirtitulo}}\\[1cm]
 }
-\centering 
+\centering
 \vfill
 \Large
 \imprimirinstituicao
@@ -295,7 +295,7 @@ ISBN XXXX-XXXX-XX.
 do projeto \abnTeX\footnote{\url{http://www.abntex.net.br/}}, e destina-se
 a servir de modelo para composição e diagramação de livros e folhetos em
 \LaTeX em conformidade com a norma ABNT NBR 6029:2006 \emph{Informação e
-documentação - Livros e folhetos - Apresentação}. 
+documentação - Livros e folhetos - Apresentação}.
 
 Em geral, qualquer classe do \LaTeX\ que contemple o formato de livros poderia
 ser utilizada (como \textsf{book}, \textsf{memoir} e \textsf{scrbook}, entre
@@ -305,7 +305,7 @@ fontes, etc., segundo a norma ABNT em questão, pode ser modificada pelo usuári
 
 Porém, este modelo foi composto com a classe \textsf{abntex2.cls} com o intuito
 de estimular que autores de teses e dissertações convertam e publiquem seus
-trabalhos em forma de livro. 
+trabalhos em forma de livro.
 
 Essencialmente, este modelo é idêntico aos demais modelos distribuídos com o
 \abnTeX. Porém, este documento exemplifica como customizar a formatação final do
@@ -335,18 +335,18 @@ bibliografia, índice remissivo (inglês: \textit{index}), colofão, etc;
 
 \end{description}
 
-Este documento deve ser utilizado como complemento dos manuais do \abnTeX\ 
+Este documento deve ser utilizado como complemento dos manuais do \abnTeX\
 \cite{abntex2classe,abntex2cite,abntex2cite-alf} e da classe \textsf{memoir}
-\cite{memoir}. 
+\cite{memoir}.
 
-  
+ 
 % ------------------------------------------------------------
 \chapter{Informação}
 % ------------------------------------------------------------
 
 Lorem \mygls{bit} dsads
 
-\marginpar{The new section start point will be pointed out 
+\marginpar{The new section start point will be pointed out
 by an arrow}
 
 % lroem ipsum \ruby{bit}{\ipa{/bɪt/}}{} dfsds \ruby{学}{がく}\ruby{生}{せい} fddfdf \tBit dsads \tBit.
@@ -484,7 +484,7 @@ Armadillo & frozen      & 8.99       \\
 % \providetranslation{Symbol (glossaries)}{Símbolo}
 % \providetranslation{Page List (glossaries)}{Lista de Páginas}
 % \providetranslation{Symbols (glossaries)}{Símbolos}
-% \providetranslation{Numbers (glossaries)}{Números} 
+% \providetranslation{Numbers (glossaries)}{Números}
 % \setglossarystyle{tree}
 
 % \cleardoublepage
