--- a/refs.bib
+++ b/refs.bib
@@ -2,12 +2,27 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Lauro Cesar Araujo at 2015-04-27 19:43:45 -0300 
+%% Created for Lauro Cesar Araujo at 2015-04-27 19:43:45 -0300
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
+
+@manual{posix,
+	shorthand = {POSIX Spec.},
+	Author = {The Open Group},
+	Title = {POSIX.1-2017, IEEE 1003.1-2017. Single UNIX Specification},
+	Url = {https://pubs.opengroup.org/onlinepubs/9699919799/},
+	Year = {2017}}
+
+@misc{dirVsFolder,
+	Title = {Directory vs. Folder},
+	Author = {mafu},
+	Publisher = {SuperUser},
+	Url = {https://superuser.com/questions/169457/directory-vs-folder},
+	Year = {2017}
+}
 
 @book{ibge1993,
 	Address = {Rio de Janeiro},
