--- a/livro.tex
+++ b/livro.tex
@@ -8,253 +8,20 @@
 	12pt,				% tamanho da fonte
 	openright,			% capítulos começam em pág ímpar (insere página vazia caso preciso)
 	twoside,			% para impressão em recto e verso. Oposto a oneside
-	b5paper,			% tamanho do papel.
-	% -- opções da classe abntex2 --
-	%chapter=TITLE,		% títulos de capítulos convertidos em letras maiúsculas
-	%section=TITLE,		% títulos de seções convertidos em letras maiúsculas
-	%subsection=TITLE,	% títulos de subseções convertidos em letras maiúsculas
-	%subsubsection=TITLE,% títulos de subsubseções convertidos em letras maiúsculas
-	% -- opções do pacote babel --
+	b5paper,			% tamanho do papel
 	english,			% idioma adicional para hifenização
 	french,				% idioma adicional para hifenização
 	brazil,				% o último idioma é o principal do documento
 	sumario=tradicional
 ]{abntex2}
 
-% compilação de fontes
-
-\usepackage{amsmath}
-\usepackage{mathtools}
-\usepackage{amsfonts}
-\usepackage{mathrsfs} % para mathscr
-\usepackage[subentrycounter,seeautonumberlist,nonumberlist=true,toc]{glossaries}
-
-  % % se for utilizar as fontes do sistema: **escolha sua fonte**
-    % comandos de fontes
-\usepackage{mathspec}
-\setmathsfont(Digits,Latin,Greek){Source Serif Pro}
-\setmathrm{Source Serif Pro}
-\setmainfont[Numbers=OldStyle]{Source Serif Pro} %fonte principal (serifada)
-\setsansfont[Scale=0.9]{Source Sans Pro} %fonte sem serifas
-\setmonofont[Scale=MatchLowercase]{Source Code Pro} % fonte monoespaçada
-
-\usepackage{polyglossia} %always load polyblossia after fonts for digits in math mode
-\setmainlanguage{brazil}
-\setotherlanguages{french,english,spanish,german,italian}
-
-\newfontfamily\ipafont{Doulos SIL}
-\newcommand{\ipa}[1]{{\ipafont #1 \regularfont}}
-
-\usepackage{marginnote}
-
-%% Observação: o pacote polyglossia pode apresentar erro ao ser utilizado com ifxetex + babel.
-%% Se isso acontecer, atualize o pacote para a versão mais recente ou utilize somente uma das sequências (pdflatex ou xelatex), comentando ou apagando a outra.
-
-\usepackage{microtype} 				% para melhorias de justificação
-\usepackage[dvipsnames]{xcolor} 		% para cores
-\usepackage{graphicx} 			% para imagens
-\usepackage{booktabs,tabularx,rotating}	% para tabelas
-\usepackage{mdframed} 				% para caixas de texto como na CIP do verso do título
-\usepackage{multicol}				% tabelas com colunas mescladas
-\usepackage{lettrine}				% letras capitulares
-\usepackage{xspace} 				% para nao precisar de espaços com {} depois de comandos
-									% como \LaTeX e abreviações criadas pelo usuário
-\usepackage{lipsum} 				% para texto de preenchimento de exemplo
-\usepackage{leading}				% espaçamento entrelinhas (leading)
-\leading{13pt}
-
-% ---
-% Pacotes de citações
-% ---
-\usepackage[brazilian,hyperpageref]{backref}	 % Paginas com as citações na bibl
-\usepackage[alf]{abntex2cite}	% Citações padrão ABNT
-
-% ---
-% Configurações do pacote backref
-% Usado sem a opção hyperpageref de backref
-\renewcommand{\backrefpagesname}{Citado na(s) página(s):~}
-% Texto padrão antes do número das páginas
-\renewcommand{\backref}{}
-% Define os textos da citação
-\renewcommand*{\backrefalt}[4]{
-	\ifcase #1 %
-		Nenhuma citação no texto.%
-	\or
-		Citado na página #2.%
-	\else
-		Citado #1 vezes nas páginas #2.%
-	\fi}%
-% ---
-
-% ---
-% Informações do documento
-% ---
-\titulo{Computadores e suas Abstrações}
-\autor{Gabriel V. N. de Queiroz}
-\data{2019, v<VERSION>}
-\preambulo{Breve sinopse do livro}
-\local{São Paulo}
-\instituicao{Publicações Acadêmicas Ltda.\\ \abnTeX\ v<VERSION>}
-
-% alterando o aspecto da cor azul
-\definecolor{blue}{RGB}{41,5,195}
-
-% informações do PDF
-\makeatletter
-\hypersetup{
-     	%pagebackref=true,
-		pdftitle={\@title},
-		pdfauthor={\@author},
-    	pdfsubject={\imprimirpreambulo},
-	    pdfcreator={LaTeX with abnTeX2},
-		pdfkeywords={abnt}{latex}{abntex}{abntex2}{livro},
-		colorlinks=false,       		% false: boxed links; true: colored links
-    	linkcolor=blue,          	% color of internal links
-    	citecolor=blue,        		% color of links to bibliography
-    	filecolor=magenta,      		% color of file links
-		urlcolor=blue,
-		bookmarksdepth=4
-}
-\makeatother
-% ---
-
-
-% ---
-% Estilo de capítulos
-%
-% \chapterstyle{pedersen}
-% \chapterstyle{lyhne}
-%\chapterstyle{madsen}
-\chapterstyle{veelo}
-%
-% Veja outros estilos em:
-% https://www.ctan.org/tex-archive/info/MemoirChapStyles
-% ---
-
-% para cabeçalhos sem estar em maiúsculas
-%\nouppercaseheads
-
-% -----
-% Declarações de cabecalhos
-% -----
-% Cabecalho padrao
-\makepagestyle{abntbookheadings}
-\makeevenhead{abntbookheadings}{\ABNTEXfontereduzida\thepage}{}{\ABNTEXfontereduzida\textit\leftmark}
-\makeoddhead{abntbookheadings}{\ABNTEXfontereduzida\textit\rightmark}{}{\ABNTEXfontereduzida\thepage}
-\makeheadrule{abntbookheadings}{\textwidth}{\normalrulethickness}
-
-% Cabecalho do inicio do capitulo
-\makepagestyle{abntbookchapfirst}
-\makeoddhead{abntbookchapfirst}{}{}{}
-
-% Configura layout para elementos textuais
-\renewcommand{\textual}{%
-  \pagestyle{abntbookheadings}%
-  \aliaspagestyle{chapter}{abntbookchapfirst}% customizing chapter pagestyle
-  \nouppercaseheads%
-  \bookmarksetup{startatroot}%
-}
-% ---
-
-
-
-% Margens do documento
-%% (margens do abntex2 não combinam nem com A5 nem com estilos de capítulo da
-% classe memoir.)
-\setlrmarginsandblock{2.5cm}{3.5cm}{*}
-\setulmarginsandblock{2.5cm}{3.5cm}{*}
-\checkandfixthelayout
-% ---
-
-% Termos indexados
-\usepackage{makeidx}
-\makeindex
-% \providecommand{\myglsindextext}[1]{\glsentrydesc{#1} (\glsentrytext{#1})}
-% \providecommand{\myglsindex}[1]{\index{\myglsindextext{#1}}}
-\renewcommand{\glsnamefont}[1]{{\normalfont \textsc{#1}}}
-\providecommand{\myglsindex}[1]{\index{#1@\textsc{#1}}}
-\providecommand{\mygls}[1]{{\scshape \gls{#1}\myglsindex{#1}}}
-\providecommand{\myglspl}[1]{{\scshape \glspl{#1}\myglsindex{#1}}}
-\providecommand{\myGls}[1]{{\scshape \Gls{#1}\myglsindex{#1}}}
-\providecommand{\myGlspl}[1]{{\scshape \Glspl{#1}\myglsindex{#1}}}
-
-
-% Glossários
-\makeglossaries
-\newglossaryentry{pai}{
-    name={pai},
-    plural={pai},
-    description={este é uma entrada pai, que possui outras
-    subentradas.} }
-\newglossaryentry{bit}{
-    name={bit},
-    plural={bits},
-    description={Dígito binário. Pode ser \texttt{0} (zero) ou \texttt{1} (um)} }
+\input{cabecalho}
 
 % ---
 % Início do documento
 % ---
 \begin{document}
-\addcontentsline{toc}{chapter}{Capa}
-\frenchspacing
-
-\frontmatter
-
-% ---
-% Contra-capa
-% ---
-\begin{titlingpage}
-
-\phantom{xxx}
-\vspace{0.5cm}
-\huge
-\raggedright
-\imprimirautor\\
-\vspace{2.5cm}
-\huge
-{\raggedleft
-\includegraphics[scale=0.9]{abntex2-modelo-img-marca.pdf}\\[1cm]
-\textit{\textcolor{blue}{\imprimirtitulo}}\\[1cm]
-}
-\centering
-\vfill
-\Large
-\imprimirinstituicao
-
-% Verso da contra-capa
-\clearpage
-\ABNTEXfontereduzida
-© 2017 \imprimirautor \space \& \imprimirinstituicao
-
-%Qualquer parte desta publicação pode ser reproduzida, desde que citada a fonte.
-
-\vspace*{\fill}
-
-\begin{center}
-Dados Internacionais de Catalogação na Publicação (\textsc{cip})
-Câmara Brasileira do Livro, \textsc{sp}, Brasil
-\end{center}
-
-\begin{mdframed}
-\noindent Queiroz, Gabriel V. N. de
-
-\imprimirtitulo. / \imprimirautor. -- \imprimirlocal: \imprimirinstituicao
-Ltda., 2015.
-
-\medskip
-
-Bibliografia.
-
-ISBN XXXX-XXXX-XX.
-
-\medskip
-
-1. Programas de computador. 2. Tipografia. 3. Latex. 4. Normas ABNT.
-
-\end{mdframed}
-
-\end{titlingpage}
-% ---
+\input{capa}
 
 % ---
 % inserir lista de ilustrações
@@ -339,7 +106,7 @@ Este documento deve ser utilizado como complemento dos manuais do \abnTeX\
 \cite{abntex2classe,abntex2cite,abntex2cite-alf} e da classe \textsf{memoir}
 \cite{memoir}.
 
- 
+
 % ------------------------------------------------------------
 \chapter{Informação}
 % ------------------------------------------------------------
@@ -471,6 +238,8 @@ Armadillo & frozen      & 8.99       \\
 \end{table}
 
 \lipsum[9]
+\cite{posix}
+\cite{dirVsFolder}
 
 % ------------------------------------------------------------
 \postextual % pós-textual
@@ -490,13 +259,13 @@ Armadillo & frozen      & 8.99       \\
 % \cleardoublepage
 \phantomsection
 % \addcontentsline{toc}{chapter}{\glossaryname}
-% \glsaddall
+\glsaddall
 \printglossary[title=Glossário]
 
 \printindex
 
 % ------------------------------------------------------------
-\bibliography{../refs} % insere o arquivo de bibliografia
+\printbibliography
 % ------------------------------------------------------------
 
 \end{document}
