--- a/capa.tex
+++ b/capa.tex
@@ -16,7 +16,7 @@
 \vspace{2.5cm}
 \huge
 {\raggedleft
-\includegraphics[scale=0.9]{abntex2-modelo-img-marca.pdf}\\[1cm]
+% \includegraphics[scale=0.9]{abntex2-modelo-img-marca.pdf}\\[1cm]
 \textit{\textcolor{blue}{\imprimirtitulo}}\\[1cm]
 }
 \centering
