--- a/glossario.tex
+++ b/glossario.tex
@@ -9,6 +9,10 @@
     name={bit},
     plural={bits},
     description={Dígito binário. Pode ser \texttt{0} (zero) ou \texttt{1} (um)} }
+\newglossaryentry{byte}{
+    name={byte},
+    plural={bytes},
+    description={(en: /\ipa{baɪt}/, pt-BR: /\ipa{baitʃi}/) Sequência de 8 bits} }
 \newglossaryentry{palavra}{
     name={palavra},
     plural={palavras},
@@ -54,3 +58,16 @@
     name={directory},
     plural={directorys},
     description={Veja \mygls{folder}} }
+
+\newglossaryentry{float}{
+    name={número de ponto flutuante},
+    plural={números de ponto flutuante},
+    description={Aproximação numérica análoga à notação científica} }
+\newglossaryentry{num-flu}{
+    name={número flutuante},
+    plural={números flutuantes},
+    description={Veja \mygls{float}} }
+\newglossaryentry{lit-float}{
+    name={float},
+    plural={floats},
+    description={Veja \mygls{float}} }
